service-b/k8s/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-b
spec:
  host: service-b
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: service-b-default
      labels:
        app: service-b
        version: v1
