service-b/k8s/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-v2-b
  labels:
    app: service-v2-b
    service: service-v2-b
spec:
  selector:
    app: service-v2-b
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
