service-b/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
  labels:
    app: service-b
    service: service-b
spec:
  selector:
    app: service-b
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
